<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
   <LinearLayout 
   android:orientation="horizontal"
   android:layout_height="wrap_content"
   android:layout_width="match_parent"
   >
    <Button android:text="@string/Record" android:id="@+id/btnIntendV"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1" />
  </LinearLayout>

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="153dp"
       android:text="@string/Text"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/Home"
       android:onClick="GotoHome" />

   <ImageView
       android:id="@+id/imageView1"
       android:contentDescription="@string/desc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/danger" />

  <VideoView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content" 
      android:visibility="invisible"
      android:id="@+id/videoView1" />
</LinearLayout>
